force-app/main/default/objects/Call_Record__c/Call_Record__c.object-meta.xml
<CustomObject>
    <label>Call Record</label>
    <nameField>
        <label>Call Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>