force-app/main/default/objects/Call_Record__c/fields/Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>Rec_Date__c</fullName>
    <label>Rec Date</label>
    <type>Date</type>
</CustomField>