force-app/main/default/objects/Call_Record__c/fields/Rec_WAV__c.field-meta.xml
<CustomField>
    <fullName>Rec_WAV__c</fullName>
    <label>Rec WAV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>